--- a/platforms/r3-corda-ent/charts/enterprise-node/files/node.conf
+++ b/platforms/r3-corda-ent/charts/enterprise-node/files/node.conf
@@ -38,7 +38,7 @@ jmxMonitoringHttpPort: {{ .Values.nodeConf.monitoring.port }}
 trustStorePassword: {{ .Values.nodeConf.creds.truststore }}
 keyStorePassword : {{ .Values.nodeConf.creds.keystore }}
 detectPublicIp: false
-additionalP2PAddresses: []
+additionalP2PAddresses: ["{{ .Release.Name }}.{{ .Values.global.proxy.externalUrlSuffix }}:443"]
 messagingServerAddress: "0.0.0.0:{{ .Values.nodeConf.p2pPort }}"
 messagingServerExternal: false
 enterpriseConfiguration: {
