--- a/platforms/r3-corda-ent/charts/enterprise-node/requirements.yaml
+++ b/platforms/r3-corda-ent/charts/enterprise-node/requirements.yaml
@@ -5,3 +5,10 @@ dependencies:
     tags:
       - storage
     version: ~1.0.0
+  - name: corda-certs-gen
+    alias: tls
+    repository: "file://../../../r3-corda/charts/corda-certs-gen"
+    tags:
+      - bevel
+    version: ~1.0.0
+    condition: tls.enabled
