--- a/platforms/r3-corda-ent/charts/values/noproxy-and-novault/node.yaml
+++ b/platforms/r3-corda-ent/charts/values/noproxy-and-novault/node.yaml
@@ -25,11 +25,13 @@ network:
   creds:
     truststore: password
 
+tls:
+  enabled: false
+
 nodeConf:
   legalName: "O=Node,OU=Node,L=London,C=GB"
-  doormanPort: 10000
-  networkmapPort: 10000
+  networkMapPort: 10000
   doormanDomain: idman.supplychain-ent
-  networkmapDomain: cenm-networkmap.supplychain-ent
+  networkMapDomain: cenm-networkmap.supplychain-ent
   networkMapURL: http://cenm-networkmap.supplychain-ent:10000
   doormanURL: http://idman.supplychain-ent:10000
