--- a/platforms/r3-corda-ent/charts/cenm/requirements.yaml
+++ b/platforms/r3-corda-ent/charts/cenm/requirements.yaml
@@ -35,3 +35,10 @@ dependencies:
     tags:
       - bevel
     version: ~1.0.0
+  - name: corda-certs-gen
+    alias: tls
+    repository: "file://../../../r3-corda/charts/corda-certs-gen"
+    tags:
+      - bevel
+    version: ~1.0.0
+    condition: tls.enabled
