--- a/platforms/r3-corda-ent/charts/values/proxy-and-vault/cenm.yaml
+++ b/platforms/r3-corda-ent/charts/values/proxy-and-vault/cenm.yaml
@@ -4,13 +4,19 @@
 global:
   serviceAccountName: bevel-auth
   cluster:
-    provider: azure
+    provider: aws
     cloudNativeServices: false
   vault:
-    type: kubernetes
+    type: hashicorp
+    role: vault-role
+    address: http://vault.url:8200
+    authPath: supplychain
+    secretEngine: secretsv2
+    secretPrefix: "data/supplychain"
+    network: corda-enterprise
   proxy:
-    provider: none
-    externalUrlSuffix: svc.cluster.local
+    provider: "ambassador"
+    externalUrlSuffix: test.blockchaincloud.com
 storage:
   size: 1Gi
   dbSize: 5Gi
@@ -21,4 +27,6 @@ settings:
   removeKeysOnDelete: true # this will erase keys
 
 tls:
-  enabled: false
+  enabled: true
+  settings:
+    networkServices: true
