--- a/platforms/r3-corda-ent/charts/values/proxy-and-vault/notary.yaml
+++ b/platforms/r3-corda-ent/charts/values/proxy-and-vault/notary.yaml
@@ -7,11 +7,15 @@ global:
     provider: azure
     cloudNativeServices: false
   vault:
-    type: kubernetes
+    type: hashicorp
+    role: vault-role
+    address: http://vault.url:8200
+    authPath: supplychain
+    secretEngine: secretsv2
+    secretPrefix: "data/supplychain"
   proxy:
-    provider: none
-    externalUrlSuffix: svc.cluster.local
-
+    provider: "ambassador"
+    externalUrlSuffix: test.blockchaincloud.com
 image:
   notary:
     repository: corda/corda-enterprise
@@ -22,16 +26,17 @@ network:
     truststore: password
 
 tls:
-  enabled: false
+  nameOverride: notary   # should match the release name
+  enabled: true
 
 nodeConf:
   legalName: "O=Notary,OU=Notary,L=London,C=GB"
   notary:
     validating: true
     serviceLegalName: "O=Notary,OU=Notary Service,L=London,C=GB"
-  doormanPort: 10000
-  networkMapPort: 10000
-  doormanDomain: idman.supplychain-ent
-  networkMapDomain: cenm-networkmap.supplychain-ent
-  networkMapURL: http://cenm-networkmap.supplychain-ent:10000
-  doormanURL: http://idman.supplychain-ent:10000
+  doormanPort: 443
+  networkMapPort: 443
+  doormanDomain: cenm-doorman.test.blockchaincloud.com
+  networkMapDomain: cenm-nms.test.blockchaincloud.com
+  networkMapURL: https://cenm-nms.test.blockchaincloud.com
+  doormanURL: https://cenm-doorman.test.blockchaincloud.com
