feat(substrate): enable platform deployment via ansible server
This commit introduces support for deploying a decentralized ledger technology (DLT) network using Ansible automation. The changes include:

- Added a new network configuration file (`substrate-network-config.yaml`) to define nodes (Bootnode, Validator, Member, IPFS) within a single organization.
- Updated the `deployment-network.yaml` to support the new network configuration.
- Updated multiple Ansible roles, Helm release templates, and charts to align with the new network configuration.
- Updated the user guide documentation to assist users/developers in correctly configuring the network.

fixes #2547

Signed-off-by: saurabhkumarkardam <saurabh.kumar.kardam@accenture.com>

--- a/platforms/substrate/charts/dscp-ipfs-node/requirements.yaml
+++ b/platforms/substrate/charts/dscp-ipfs-node/requirements.yaml
@@ -7,7 +7,7 @@ dependencies:
     version: 4.x.x
     condition: dscpNode.enabled
   - name: bevel-storageclass
-    alias: storage
+    alias: substrate-storage
     repository: "file://../../../shared/charts/bevel-storageclass"
     tags:
       - storage
