--- a/platforms/substrate/charts/substrate-genesis/templates/generate-keys.yaml
+++ b/platforms/substrate/charts/substrate-genesis/templates/generate-keys.yaml
@@ -16,6 +16,7 @@ metadata:
     "helm.sh/hook-weight": "1"
     "helm.sh/hook-delete-policy": "before-hook-creation"
   labels:
+    app: genesis
     app.kubernetes.io/name: pre-install-hook
     app.kubernetes.io/component: keygen
     app.kubernetes.io/namespace: {{ .Release.Namespace }}
