--- a/platforms/substrate/charts/substrate-node/Chart.yaml
+++ b/platforms/substrate/charts/substrate-node/Chart.yaml
@@ -2,9 +2,26 @@
 #  This Chart is a fork from https://github.com/paritytech/helm-charts
 #  Please update if needed
 ##############################################################################################
-apiVersion: v1
+
+---
+apiVersion: v2 
 name: substrate-node
 description: A Helm chart to deploy Substrate/Polkadot nodes
 type: application
-version: 1.2.0
-appVersion: "0.0.1"
+version: 1.0.0
+appVersion: latest
+keywords:
+  - bevel
+  - ethereum
+  - substrate
+  - hyperledger
+  - enterprise
+  - blockchain
+  - deployment
+  - accenture
+home: https://hyperledger-bevel.readthedocs.io/en/latest/
+sources:
+  - https://github.com/hyperledger/bevel
+maintainers:
+  - name: Hyperledger Bevel maintainers
+    email: bevel@lists.hyperledger.org
