--- a/platforms/substrate/charts/substrate-node/requirements.yaml
+++ b/platforms/substrate/charts/substrate-node/requirements.yaml
@@ -1,6 +1,6 @@
 dependencies:
   - name: bevel-storageclass
-    alias: storage
+    alias: substrate-storage
     repository: "file://../../../shared/charts/bevel-storageclass"
     tags:
       - storage
