--- a/platforms/substrate/configuration/deploy-network.yaml
+++ b/platforms/substrate/configuration/deploy-network.yaml
@@ -1,20 +1,21 @@
 ##############################################################################################
-#  Copyright Accenture. All Rights Reserved.
+# Copyright Accenture. All Rights Reserved.
 #
-#  SPDX-License-Identifier: Apache-2.0
+# SPDX-License-Identifier: Apache-2.0
 ##############################################################################################
 
 ##############################################################################################
-# This playbook deploys a DLT network on existing Kubernetes clusters
-# The Kubernetes clusters should already be created and the infomation to connect to the
-#  clusters be updated in the network.yaml file that is used as an input to this playbook
+# This Ansible playbook deploys a Distributed Ledger Technology (DLT) network on existing 
+# Kubernetes clusters. The Kubernetes clusters must already be provisioned, and the necessary 
+# connection information should be updated in the `network.yaml` file, which serves as input 
+# for this playbook.
 ##############################################################################################
 
 ##############################################################################################
-# To Run this playbook from this directory, use the following command (network.yaml also in this directory)
-#  ansible-playbook deploy-network.yaml -e "@./network.yaml"
+# Usage:
+# To execute this playbook from the current directory, use the following command:
+# ansible-playbook deploy-network.yaml -e "@./network.yaml"
 ##############################################################################################
-
 
 # Please ensure that the ../../shared/configuration playbooks have been run using the same network.yaml
 - hosts: ansible_provisioners
@@ -27,7 +28,7 @@
       path: "./build"
       state: absent
 
-  # Create namespace
+  # Create Kubernetes namespaces for each organization
   - name: "Create namespace"
     include_role: 
       name: create/namespace
@@ -38,46 +39,19 @@
       gitops: "{{ item.gitops }}"
     loop: "{{ network['organizations'] }}"
 
-  # Create Storageclass
-  - name: Create Storage Class
+  # Create necessary Kubernetes secrets for each organization
+  - name: "Create k8s secrets"
     include_role:
-      name: "{{ playbook_dir }}/../../../platforms/shared/configuration/roles/setup/storageclass"
+      name: create/secrets
     vars:
-      sc_name: "{{ org.name | lower }}-bevel-storageclass"
-      region: "{{ org.k8s.region | default('eu-west-1') }}"
-    loop: "{{ network['organizations'] }}"
-    loop_control:
-        loop_var: org
-
-  # Setup script for Vault and OS Package Manager
-  - name: "Setup script for Vault and OS Package Manager"
-    include_role:
-      name: "{{ playbook_dir }}/../../shared/configuration/roles/setup/scripts"
-    vars:
-      namespace: "{{ org.name | lower }}-subs"
-      kubernetes: "{{ org.k8s }}"
-    loop: "{{ network['organizations'] }}"
-    loop_control:
-      loop_var: org
-
-  # Setup Vault-Kubernetes accesses and Regcred for docker registry
-  - name: "Setup vault"   
-    include_role: 
-      name: "{{ playbook_dir }}/../../shared/configuration/roles/setup/vault_kubernetes"
-    vars:
-      name: "{{ org.name | lower }}"
       component_ns: "{{ org.name | lower }}-subs"
-      component_name: "{{ org.name | lower }}-vaultk8s-job"
-      component_auth: "{{ network.env.type }}{{ name }}"
-      component_type: "organization"
       kubernetes: "{{ org.k8s }}"
       vault: "{{ org.vault }}"
-      gitops: "{{ org.gitops }}"
     loop: "{{ network['organizations'] }}"
     loop_control:
       loop_var: org
 
-  # Generate Ambassador certificate for nodes
+  # Generate Ambassador certificates for nodes (if using Ambassador as proxy)
   - name: "Create ambassador certificates for Nodes" 
     include_role: 
       name: create/certificates/ambassador
@@ -93,51 +67,13 @@
     loop: "{{ network['organizations']}}"
     when: network.env.proxy == "ambassador"
 
-  # Generate the key materials and stores them in vault
-  - name: "Generate key materials for Nodes"
+  # Generate Genesis file that will contain the record of all nodes
+  - name: "Generate Genesis"
     include_role:
-      name: create/keys
-    vars:
-      name: "{{ item.name | lower }}"        
-      component_name: "{{ item.name | lower }}"
-      component_ns: "{{ item.name | lower }}-subs"
-      vault: "{{ item.vault }}"
-      peers: "{{ item.services.peers }}"
-      charts_dir: "{{ item.gitops.chart_source }}"
-      values_dir: "{{playbook_dir}}/../../../{{item.gitops.release_dir}}/{{ item.name | lower }}"
-      org: "{{ item }}"
-      gitops: "{{ item.gitops }}"
-      kubernetes: "{{ item.k8s }}"
-    loop: "{{ network['organizations'] }}"
+      name: create/generate_genesis
 
-  # Generate the genesis.json for all orgs of the network
-  - name: "Generate genesis for the network"
-    include_role:
-      name: create/genesis
-    vars:
-      build_path: "./build"
-      sudo_org_query: "organizations[?type=='superuser']"
-      org: "{{ network | json_query(sudo_org_query) | first }}"
-
-  # Deploy Substrate bootnodes
-  - name: "Deploy Bootnodes"
-    include_role:
-      name: create/bootnode
-    vars:
-      build_path: "./build"
-      kubernetes: "{{ item.k8s }}"
-      component_ns: "{{ item.name | lower }}-subs"
-      name: "{{ item.name | lower }}"
-      peers: "{{ item.services.peers }}"
-    loop: "{{ network['organizations'] }}"
-
-  # Generate the bootnode list file
-  - name: "Generate bootnode file list for the network"
-    include_role:
-      name: create/bootnodefile
-
-  # Deploy Substrate validator nodes
-  - name: "Deploy Substrate validators"
+  # Deploy Bootnodes or Validator nodes
+  - name: "Deploy Bootnode or Validator nodes"
     include_role:
       name: create/validator_node
     vars:
@@ -148,32 +84,8 @@
       peers: "{{ item.services.peers }}"
     loop: "{{ network['organizations'] }}"
 
-  # Deploy ipfs bootnodes
-  - name: "Deploy ipfs bootnodes"
-    include_role: 
-      name: create/ipfs_bootnode
-    vars:
-      build_path: "./build"
-      charts_dir: "{{ item.gitops.chart_source }}"
-      values_dir: "{{playbook_dir}}/../../../{{item.gitops.release_dir}}/{{ item.name | lower }}"
-      org: "{{ item }}"
-      vault: "{{ item.vault }}"
-      peers: "{{ item.services.peers }}"
-      gitops: "{{ item.gitops }}"
-      component_name: "{{ item.name | lower }}"
-      component_ns: "{{ item.name | lower }}-subs"
-      name: "{{ item.name | lower }}"
-    loop: "{{ network['organizations'] }}"
-    when: network.config.node_image == "inteli-poc/dscp-node"
-
-  # Generate the ipfsbootnode list file
-  - name: "Generate ipfsbootnode file list for the network"
-    include_role:
-      name: create/ipfsbootnodefile
-    when: network.config.node_image == "inteli-poc/dscp-node"
-
-  # Deploy Substrate member nodes
-  - name: "Deploy Substrate members"
+  # Deploy Member nodes, including IPFS node if enabled
+  - name: "Deploy Member nodes, including IPFS node if enabled"
     include_role:
       name: create/member_node
     vars:
@@ -184,7 +96,7 @@
       name: "{{ item.name | lower }}"
       peers: "{{ item.services.peers }}"
     loop: "{{ network['organizations'] }}"
-  
+
   # These variables can be overriden from the command line
   vars:
     install_os: "linux"           # Default to linux OS
