--- a/platforms/substrate/configuration/roles/create/member_node/tasks/main.yaml
+++ b/platforms/substrate/configuration/roles/create/member_node/tasks/main.yaml
@@ -4,56 +4,18 @@
 #  SPDX-License-Identifier: Apache-2.0
 ##############################################################################################
 
-# Generate member node helmrelease file
-- name: Create value file for member nodes
-  include_role:
-    name: create/helm_component
-  vars:
-    component_name: "{{ name }}{{ peer.name }}membernode"
-    type: "node_substrate"
-    storageclass_name: "{{ item.name | lower }}-bevel-storageclass"
-    external_url: "{{ item.external_url_suffix }}"
-    vault: "{{ item.vault }}"
-    git_url: "{{ item.gitops.git_url }}"
-    git_branch: "{{ item.gitops.branch }}"
-    org: "{{ item }}"
-    docker_url: "{{ network.docker.url }}"
-    charts_dir: "{{ item.gitops.chart_source }}"
-    values_dir: "{{playbook_dir}}/../../../{{item.gitops.release_dir}}/{{ item.name | lower }}"    
-    bootnode_data: "{{ lookup('file', '{{ network.config.bootnodes }}').splitlines() }}"
-    command: "{{ network.config.command }}"
-    role: "full"
+# Generate member node HelmRelease files
+- name: "Create value file for member nodes"
+  include_tasks: member_node.yaml
   loop: "{{ peers }}"
   loop_control:
     loop_var: peer
   when: peer.type == "member"
 
-# Generate ipfs node helmrelease file
-- name: "Create ipfs node release file"
-  include_role:
-    name: create/helm_component
-  vars:    
-    component_name: "{{ peer.name }}-ipfs-node"
-    type: "dscp_ipfs_node"
-    storageclass_name: "{{ item.name | lower }}-bevel-storageclass"
-    external_url: "{{ item.external_url_suffix }}"
-    git_url: "{{ item.gitops.git_url }}"
-    git_branch: "{{ item.gitops.branch }}"
-    org: "{{ item }}"
-    docker_url: "{{ network.docker.url }}"
-    charts_dir: "{{ item.gitops.chart_source }}"
-    values_dir: "{{playbook_dir}}/../../../{{item.gitops.release_dir}}/{{ item.name | lower }}"
-    ipfs_bootnode: "{{ lookup('file', '{{ network.config.ipfsbootnodes }}').splitlines() }}"
+# Generate IPFS node HelmRelease files
+- name: "Create value file for ipfs nodes"
+  include_tasks: ipfs_node.yaml
   loop: "{{ peers }}"
   loop_control:
     loop_var: peer
-  when: peer.type == "member" and peer.ipfs is defined
-
-# Git Push : Push the above generated files to git directory 
-- name: Git Push
-  include_role: 
-    name: "{{ playbook_dir }}/../../shared/configuration/roles/git_push"
-  vars:
-    GIT_DIR: "{{ playbook_dir }}/../../../"
-    gitops: "{{ item.gitops }}"
-    msg: "[ci skip] Pushing Peer files"
+  when: peer.type == "member" and peer.ipfs.enabled
